twitter-search-source-knative/config/twitter-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: twitter
spec:
  hosts:
  - api.twitter.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: twitter
spec:
  hosts:
  - api.twitter.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - api.twitter.com
    route:
    - destination:
        host: api.twiter.com
        port:
          number: 443
      weight: 100
